--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "npm run build && node dist/index.js"
+    "start": "npm run build && node dist/index.js",
+    "send": "node dist/index.js",
+    "serve": "npm run build && node dist/server.js"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "mjml": "^4.15.3",
     "nodemailer": "^6.9.14"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.21",
     "@types/mjml": "^4.7.4",
     "@types/node": "^18.19.44",
     "@types/nodemailer": "^6.4.15",
